--- a/index.html
+++ b/index.html
@@ -4,20 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trang Web Minh Họa</title>
+    <title>Trang Web Cá Nhân</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Chào mừng đến với trang web của tôi!</h1>
+        <h1>Chào mừng đến với trang web cá nhân của tôi!</h1>
     </header>
     <section>
-        <h2>Giới thiệu</h2>
-        <p>Đây là trang web đơn giản được thiết kế với HTML và CSS cơ bản.</p>
-        <img src="https://source.unsplash.com/random/800x400" alt="Hình ảnh minh họa">
+        <h2>Giới thiệu bản thân</h2>
+        <p>Xin chào! Tôi là Hà Minh Công [OBITO]</p>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR3R9fTA8hiXfnOwacArdXo5lRjFXguCTR8Iw&s" alt="Ảnh đại diện">
+    </section>
+    <section>
+        <h2>Thông tin cá nhân</h2>
+        <ul>
+            <li><strong>Họ và tên:</strong> Hà Minh Công</li>
+            <li><strong>Email:</strong> haminhcong2k3@gmail.com</li>
+            <li><strong>Số điện thoại:</strong> 0396909114 </li>
+            <li><strong>Địa chỉ:</strong> Quận 9</li>
+        </ul>
+        <img src="https://source.unsplash.com/random/800x400?landscape" alt="Hình ảnh phong cảnh">
     </section>
     <footer>
-        <p>&copy; 2025 Trang Web Minh Họa. Tất cả quyền được bảo lưu.</p>
+        <p>&copy; 2025 Trang Web Cá Nhân. Tất cả quyền được bảo lưu.</p>
     </footer>
 </body>
 </html>
